--- a/templates/Front/sante.html.twig
+++ b/templates/Front/sante.html.twig
@@ -1,9 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'Front/base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}E-CITY{% endblock %}
 {% block section %}
-<h1>hey sante </h1>
+<h1></h1>
 {% endblock %}
 {% block body %}
-<h1>.</h1>
 {% endblock %}
