--- a/templates/Front/index.html.twig
+++ b/templates/Front/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Front/base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}E-CITY{% endblock %}
    {% block section3 %}
     <section id="counts" class="section counts">
 
@@ -77,13 +77,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="{{ asset('img/hero-bg.jpg') }}" alt="" data-aos="fade-in">
+      <img src="{{ asset('img/background.png') }}" alt="" data-aos="fade-in">
 
       <div class="container">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">Learning Today,<br>Leading Tomorrow</h2>
-        <p data-aos="fade-up" data-aos-delay="200">We are team of talented designers making websites with Bootstrap</p>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">Dynamiser le présent,<br>Innover pour demain</h2>
+        <p data-aos="fade-up" data-aos-delay="200">Bienvenue sur e-City, votre destination intelligente où la vie devient plus facile grâce à une gamme complète de services pour vos besoins quotidiens.</p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-          <a href="courses.html" class="btn-get-started">Get Started</a>
+          <a <a href="{{ path ('app_client_signUp')}}" class="btn-get-started">Get Started</a>
         </div>
       </div>
 {% endblock %}
@@ -408,15 +408,6 @@
     </section><!-- /Trainers Index Section -->
 {% endblock %}
 
-{% block menu %}
-  <li><a href="{{ path ('app_acceuil')}}" class="active">Acceuil</a></li>
-  <li><a href="{{ path ('app_acceuil')}}">Santé</a></li>
-  <li><a href="{{ path ('app_acceuil')}}">Shopping</a></li>
-  <li><a href="{{ path ('app_transport')}}">Transport</a></li>
-  <li><a href="{{ path ('app_parking')}}">Parking</a></li>
-  <li><a href="{{ path ('app_acceuil')}}">Tourisme</a></li>
-  <li><a href="{{ path ('app_acceuil')}}">Contact</a></li>
-{% endblock %}
 {% block body %}
 {% endblock %}
 
