--- a/templates/Front/base.html.twig
+++ b/templates/Front/base.html.twig
@@ -44,32 +44,48 @@
 {% block body %}{% endblock %}
 {% block header %}
 {% set currentRoute = app.request.attributes.get('_route') %}
-  <header id="header" class="header d-flex align-items-center sticky-top">
+ <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="{{ path ('app_acceuil')}}"  class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="{{ asset ('img/logo.png') }}" alt=""> -->
-        <h1 class="">E-CITY</h1>
+         <img src="{{ asset ('img/logo.png') }}" alt="">
+<h1 style="color: #37423b;">E-CITY</h1>
+        <!--<img src="{{ asset ('logo_city.png') }}" alt="">-->
       </a>
+     
 <nav id="navmenu" class="navmenu">
+   <ul>
+   <li> <a href="{{ path ('app_acceuil')}}" {% if currentRoute == 'app_acceuil' %}class="active"{% endif %}>Accueil</a></li>
+   <li class="dropdown has-dropdown"><a href="#"{% if currentRoute == 'app_medecin_getAll' %}class="active"{% endif %}><span>Santé</span><i class="bi bi-chevron-down"></i></a>
+
     <ul>
-        <li><a href="{{ path ('app_acceuil')}}" {% if currentRoute == 'app_acceuil' %}class="active"{% endif %}>Accueil</a></li>
-<li class="dropdown has-dropdown" ><a href="#">Santé</a>
-            <ul>
-                  <li><a href="{{ path ('app_medecin_getAll')}}">Les Medecins</a></li>
-                  <li><a href="#">Les Rendez-Vous</a></li>
-            </ul>
-          </li>
-        <li><a href="{{ path ('app_shopping')}}" {% if currentRoute == 'app_shopping' %}class="active"{% endif %}>Shopping</a></li>
-        <li><a href="{{ path ('app_transport')}}" {% if currentRoute == 'app_transport' %}class="active"{% endif %}>Transport</a></li>
-        <li><a href="{{ path ('app_parking')}}" {% if currentRoute == 'app_parking' %}class="active"{% endif %}>Parking</a></li>
-        <li><a href="{{ path ('app_tourism')}}" {% if currentRoute == 'app_tourism' %}class="active"{% endif %}>Tourisme</a></li>
-        <li><a href="{{ path ('app_contact')}}" {% if currentRoute == 'app_contact' %}class="active"{% endif %}>Contact</a></li>
+        <li><a href="{{ path ('app_medecin_getAll')}}">Les Medecins</a></li>
+        <li><a href="#">Les Rendez-Vous</a></li>
     </ul>
-    <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+   </li>
+   <li><a href="{{ path ('app_shopping')}}" {% if currentRoute == 'app_shopping' %}class="active"{% endif %}>Shopping</a></li>
+   <li><a href="{{ path ('app_transport')}}" {% if currentRoute == 'app_transport' %}class="active"{% endif %}>Transport</a></li>
+   <li><a href="{{ path ('app_parking')}}" {% if currentRoute == 'app_parking' %}class="active"{% endif %}>Parking</a></li>
+   <li><a href="{{ path ('app_tourism')}}" {% if currentRoute == 'app_tourism' %}class="active"{% endif %}>Tourisme</a></li>
+   <li><a href="{{ path ('app_contact')}}" {% if currentRoute == 'app_contact' %}class="active"{% endif %}>Contact</a></li>
+   <li class="dropdown has-dropdown"> <a href="#"><span class="text-dark"><img src="{{asset('#')}}" class="avatar img-fluid rounded me-1" alt="nom-client" /></span><i class="bi bi-chevron-down"></i></a>
+      <ul>
+         <li><a href="#"> Profile</a></li>
+         <a href="#"></i> Analytics</a>
+         <a href="#"> Settings & Privacy</a>
+         <a href="#"> Help Center</a>
+         <a href="#">Log out</a>
+         </div>
+         </li>
+      </ul>
+    </li>
+      <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
 </nav>
+
+
     </div>
+  
   </header>
     {% endblock %}
 
@@ -99,6 +115,8 @@
 {% endblock %}
   </main>
 {% block footer %}
+{% set currentRoute = app.request.attributes.get('_route') %}
+
   <footer id="footer" class="footer position-relative">
 
     <div class="container footer-top">
@@ -124,9 +142,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="{{ path ('app_acceuil')}}">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
+           
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
           </ul>
@@ -157,13 +173,12 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1">SiteName</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Droits d'auteur</span> <strong class="px-1">E-CITY</strong> <span>Tous droits réservés</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
 
