--- a/templates/Back/administrateur/index.html.twig
+++ b/templates/Back/administrateur/index.html.twig
@@ -39,7 +39,7 @@
 </tr>
 {% endfor %}
 </table>
-                <a href="{{path('app_administrateur_add')}}">Ajouter Client</a>
+                <a href="{{path('app_administrateur_add')}}">Ajouter Admin</a>
 
 
 {% endblock %}
