--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2049,3 +2049,32 @@ section,
 .starter-section {
   /* Add your styles here */
 }
+/*-----------------------------------------------------------------------------------------------*/
+.blurry-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(8px);
+  z-index: 1; /* Assure que le flou soit au-dessus de tous les autres éléments */
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2; /* Assure que la modal soit au-dessus du flou */
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  left: 10px; /* Position à gauche */
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 3; /* Assure que le bouton de fermeture soit au-dessus de la modal */
+}
