--- a/templates/Front/rendez_vous/addRendezVous.html.twig
+++ b/templates/Front/rendez_vous/addRendezVous.html.twig
@@ -11,9 +11,11 @@
     <tr>{{form_widget(form.specialiteMedecin)}}</tr>
     <tr>{{form_errors(form.specialiteMedecin)}}</tr>
 
-    <tr>{{form_label(form.idMedecin)}}</tr>
-    <tr>{{form_widget(form.idMedecin)}}</tr>
-    <tr>{{form_errors(form)}}</tr> 
+   {% if form.idMedecin is defined %}
+    <tr>{{ form_label(form.idMedecin) }}</tr>
+    <tr>{{ form_widget(form.idMedecin) }}</tr>
+    <tr>{{ form_errors(form)}}</tr>
+{% endif %}
 </br>
     <tr>{{form_label(form.dateRendezVous)}}</tr>
     <tr>{{form_widget(form.dateRendezVous)}}</tr>
