--- a/templates/Front/rendez_vous/showRV.html.twig
+++ b/templates/Front/rendez_vous/showRV.html.twig
@@ -2,7 +2,7 @@
 {# templates/task/new.html.twig #}
 
 {% block body %}
-      <h1>{{ 'Mes RendezVous'|trans }}</h1>
+      <h1 style="margin-left: 39px; margin-top: 10px;">{{ 'Mes RendezVous'|trans }}</h1>
 
   <style>
     table {
@@ -11,7 +11,7 @@
     } 
 </style>
 
-    <table class="table table-striped table-middle-aligned table-borderless" style=" width: 70%;">
+    <table class="table table-striped table-middle-aligned table-borderless" style=" width: 95%; margin : auto;">
         <thead>
             <tr>
                 {# <th scope="col">{{ 'Nom'|trans }}</th> #}
@@ -56,7 +56,7 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('front_rendezVous_add') }}" class="btn btn-sm btn-primary">
+    <a style="margin-left: 39px; margin-top: 10px;" href="{{ path('front_rendezVous_add') }}" class="btn btn-sm btn-primary">
              <i class="fa fa-edit" aria-hidden="true"></i> {{ 'Ajouter Rendez Vous'|trans }}
     </a>
 {% endblock %}
